# ForgeOS

./: LICENSE  README.md  main.py  pyproject.toml
app/: main.py
app/agents/: base.py  planner.py
app/agents/models/: execution_plan.py
app/api/: router.py
app/api/routes/: health.py  tasks.py
app/configuration/: settings.py
app/execution/: base.py  engine.py  models.py  registry.py  types.py
app/execution/executors/: filesystem.py  mock.py
app/llm/: base.py  factory.py  models.py
app/llm/providers/: mock.py
app/middleware/: request_logger.py
app/services/: task_service.py
app/shared/: logger.py
app/workflow/: context.py  engine.py  state.py
app/workflow/enums/: priority.py  status.py
app/workflow/models/: task.py  task_create.py
tests/execution/: test_executor_registry.py  test_filesystem_executor.py  test_mock_executor.py
tests/workflow/: test_workflow_engine.py
