[project]
name = "forgeos"
version = "0.1.0"
description = "An Autonomous, Self-Healing Multi-Agent Software Engineering Platform powered by MCP."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.51.0",
]
